assignment4/src/3309-store/client/src/css/style.scss
//login------------------------------------------
.login-container {
  display: flex;
  height: 80vh;
  justify-content: center;
  align-items: center;
  vertical-align: middle;
  .login-window {
    width: 420px;
    padding: 2rem;
  }
}
//----------------------------------------------


//Header----------------------------------------
.header-container {
  background-color: rgba(0, 0, 0, 1);
  width: 100%;
  height: 44px;
  color: #fff;
  font-size: 11px;
  line-height: 44px;
  .navigation {
    max-width: 1100px;
    margin: auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
    & a {
      display: inline-block;
      color: #fff;
      padding: 0 8px;
      transition: all 0.2s;
      text-transform: uppercase;
      font-size: 12px;
      &:hover {
        color: #ddd;
      }
    }
    .username {
      padding-left: 0.4rem;
      font-size: 13px;
      cursor: pointer;
      &:hover {
        color: #ddd;
      }
      i {
        margin-right: 4px;
      }
    }
  }
}
//---------------------------------------------


//ProductList----------------------------------
.products-container {
  max-width: 1100px;
  margin: auto;
  // padding: 1.4rem 0;
  min-height: calc(100vh - 50px);
  .popup-btn {
    font-size: 14px;
    margin-bottom: 15px;
    z-index: 99;
    width: 100%;
    font-weight: bold;
  }
}
//---------------------------------------------


//CategoryList---------------------------------
.categories-container {
  max-width: 1100px;
  padding: 1rem 0;
  margin: auto;
  text-align: center;
}
//---------------------------------------------


//InvalidPath----------------------------------
.invalid {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  font-size: 3rem;
  font-weight: 900;
}
//---------------------------------------------


//ProductListHeader----------------------------
.products-header {
  max-width: 1100px;
  margin: auto;
  border-bottom: 3px solid #333;
  padding: 2rem 0.2rem 1.5rem 0.2rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  .store-name {
    font-size: 2rem;
    color: #333;
    font-weight: 500;
    text-transform: uppercase;
  }
  .search-window {
    .search-bar {
      width: 500px;
      outline: 0;
    }
  }
  .cart-div {
    cursor: pointer;
    display: inline-block;
    color: #333;
    font-size: 1.2rem;
    .cart-amount {
      margin-left: 4px;
    }
  }
}
//---------------------------------------------


//Category-------------------------------------
.category-container {
  background: rgba(0, 0, 0, 1);
  padding: 0.5rem;
  cursor: pointer;
  & a {
    color: #fff;
    padding: 0 8px;
    transition: all 0.2s;
    text-transform: uppercase;
    font-size: 12px;
    &:hover {
      color: #de1b55;
    }
  }
}
//---------------------------------------------


//ProductItem----------------------------------
.item-container {
  background: #fff;
  padding: 1.5rem;
  .item-header {
    height: 1.2rem;
    .edit-button {
      cursor: pointer;
      color: rgb(122, 122, 122);
      
    }
  }

  .item-content {
    .item-img-container {
      position: relative;
      margin-top: 10px;
      .out-of-stock-label {
        position: absolute;
        top: 0;
        bottom: 0;
        right: 0;
        left: 0;
        background: rgba(255, 255, 255, 0.75);
        display: flex;
        justify-content: center;
        align-items: center;
        color: rgb(165, 71, 71);
        z-index: -1;
        font-weight: 800;
        font-size: 16px;
        text-transform: uppercase;
      }
      .on-sale-label {
        position: absolute;
        top: 0;
        bottom: 1;
        right: 1;
        left: 0;
        display: flex;
        justify-content: center;
        align-items: center;
        color: rgb(255, 255, 255);
        background: rgb(255, 2, 2);
        padding: 1.5px;
        z-index: -1;
        font-weight: 800;
        font-size: 13px;
        text-transform: uppercase;
      }
      img {
        max-width: 100%;
        height: auto;
        max-height: 100%;
      }
    }
    .item-tags {
      color: rgb(122, 122, 122);
      font-size: 12px;
      display: inline;
      padding: 2px 0;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
    .item-name {
      font-size: 14px;
      color: rgb(19, 19, 19);
      font-weight: bold;
      display: -webkit-box !important;
      overflow: hidden;
      text-overflow: ellipsis;
      word-break: break-all;
      -webkit-box-orient: vertical;
      -webkit-line-clamp: 2;
      height: 2.5rem;
      &:hover {
        color: rgb(207, 15, 73);
      }
    }
  }
  .item-footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 8px;
    .price {
      color: #333;
      font-weight: 600;
    }
    .item-btn {
      outline: none;
      border: none;
      padding: 0;
      background-color: #ddd;
      width: 2rem;
      height: 2rem;
      border-radius: 30%;
      color: rgb(117, 115, 115);
      cursor: pointer;
      transition: all 0.2s;
      &:hover {
        background-color: rgba(0, 0, 0, 1);
        color: #fff;
      }
      &:active {
        background-color: rgb(10, 88, 133);
        color: #fff;
      }
      i {
        transform: translateX(-8%);
      }
      i:last-child {
        display: none;
      }
      &:disabled {
        cursor: not-allowed;
        background-color: #f9f9f9;
        color: rgb(199, 84, 18);
      }
      &:disabled > i:first-child {
        display: none;
      }
      &:disabled > i:last-child {
        display: inline !important;
      }
    }
  }
}
.out-of-stock {
  .out-of-stock-label {
    // move label forward (change z-index) when item is out of stock
    z-index: 1 !important;
  }
}

.on-sale {
  .on-sale-label {
    // move label forward (change z-index) when item is on sale
    z-index: 1 !important;
  }
}
//---------------------------------------------


//Popup Editor---------------------------------
.popup-container {
  position: relative;
  z-index: 99;
  .window {
    transition: all 0.3s ease-in-out;
    transform: translateX(40rem);
  }
  &.on {
    .overlay {
      display: block;
    }
    .window {
      transform: translateX(0);
    }
  }
}

.overlay {
  display: none;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.4);
  z-index: 9;
}
.window {
  position: fixed;
  width: 35rem;
  top: 0;
  bottom: 0;
  right: 0;
  background: #fff;
  box-shadow: -3px 0 3px rgba(0, 0, 0, 0.04);
  transform: translateX(35rem);
  transition: all 0.3s ease-in-out;
  z-index: 99;
  .window-header {
    padding: 0.5rem;
    text-align: right;
    .close-btn {
      font-size: 24px;
      font-weight: 600;
      color: #333;
      cursor: pointer;
      line-height: 1;
      margin-right: 4px;
    }
  }
}
//---------------------------------------------

//Popup Editor Child Component-----------------
.child-popup {
  padding: 1rem 2rem;
}

//---------------------------------------------

